// Vitest Snapshot v1

exports[`LectureDetail > hasHomework is false 1`] = `
<DocumentFragment>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1h02dxw-MuiTypography-root"
  >
    string
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-css8ik-MuiTypography-root"
    >
      Содержание урока
    </h6>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-b55nah-MuiStack-root"
    >
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          1
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string1
        </h6>
      </div>
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          2
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string2
        </h6>
      </div>
    </div>
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
  >
    Спикеры
  </h4>
  <div
    class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
  >
    <div
      class="MuiStack-root css-mcfb5r-MuiStack-root"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular css-3xou8u-MuiAvatar-root"
      >
        <img
          alt="Remy Sharp"
          class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
          src="/static/images/avatar/1.jpg"
        />
      </div>
      <div
        class="MuiBox-root css-tzqd77"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
        >
          string string
        </h6>
      </div>
    </div>
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
  >
    Материалы урока
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    />
  </div>
  <div
    class="MuiBox-root css-79elbk"
  >
    <div
      class="MuiBox-root css-1nsqiu3"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-14z7ouz-MuiTypography-root"
      >
        Домашнее задание
      </h4>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
      >
        <div
          class="MuiStack-root css-zgbp5c-MuiStack-root"
        >
          <div
            class="MuiBox-root css-i6bazn"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
              Здесь будет отображаться текст домашнего задания к текущей лекции.
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
              Пример домашнего задания:
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
              1. Есть ли разница между $("h1 div"); и $("h1").$("div").
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
              Может ли привести к тому что, поиск найдёт разные элементы?
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
              2. Разработайте следующий автотест:
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
               - Откройте страницу Selenide в Github
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
               - Перейдите в раздел Wiki проекта
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
               - Убедитесь, что в списке страниц (Pages) есть страница SoftAssertions
              <br />
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
            >
               - Откройте страницу SoftAssertions, проверьте что внутри есть пример кода для JUnit5
              <br />
            </h6>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-164p8hf-MuiPaper-root"
      >
        <div
          class="MuiStack-root css-a2l1ks-MuiStack-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Ответ на задание
          </h5>
          <div
            class="MuiStack-root css-1q36rmd-MuiStack-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
              />
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-6qfr2n"
        >
          <form>
            <div
              class="MuiStack-root css-17qspa5-MuiStack-root"
            >
              <div
                class="MuiBox-root css-8atqhb"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <textarea
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r2:"
                        maxlength="2000"
                        placeholder="Текст ответа"
                        style="height: 0px; overflow: hidden;"
                      />
                      <textarea
                        aria-hidden="true"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        readonly=""
                        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                        tabindex="-1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-ihdtdm"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1tn15vr-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
                  id=":r3:"
                  tabindex="0"
                  type="button"
                >
                  Отправить
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation css-237h2n-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Д/З недоступно
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`LectureDetail > hasHomework is true 1`] = `
<DocumentFragment>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1h02dxw-MuiTypography-root"
  >
    string
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-css8ik-MuiTypography-root"
    >
      Содержание урока
    </h6>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-b55nah-MuiStack-root"
    >
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          1
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string1
        </h6>
      </div>
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          2
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string2
        </h6>
      </div>
    </div>
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
  >
    Спикеры
  </h4>
  <div
    class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
  >
    <div
      class="MuiStack-root css-mcfb5r-MuiStack-root"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular css-3xou8u-MuiAvatar-root"
      >
        <img
          alt="Remy Sharp"
          class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
          src="/static/images/avatar/1.jpg"
        />
      </div>
      <div
        class="MuiBox-root css-tzqd77"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
        >
          string string
        </h6>
      </div>
    </div>
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1t14ubg-MuiTypography-root"
  >
    Материалы урока
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    />
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-14z7ouz-MuiTypography-root"
  >
    Домашнее задание
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    />
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-164p8hf-MuiPaper-root"
  >
    <div
      class="MuiStack-root css-a2l1ks-MuiStack-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        Ответ на задание
      </h5>
      <div
        class="MuiStack-root css-1q36rmd-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
          />
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-6qfr2n"
    >
      <form>
        <div
          class="MuiStack-root css-17qspa5-MuiStack-root"
        >
          <div
            class="MuiBox-root css-8atqhb"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <textarea
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                    id=":r0:"
                    maxlength="2000"
                    placeholder="Текст ответа"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                    tabindex="-1"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1tn15vr-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
              id=":r1:"
              tabindex="0"
              type="button"
            >
              Отправить
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
